--- a/GoShopping/CanBuyView/ItemCellView.xib
+++ b/GoShopping/CanBuyView/ItemCellView.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCellView" customModule="GoShopping" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCellView" customModule="To_Buy" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJ6-8M-mCk">
-                        <rect key="frame" x="13" y="13" width="74" height="74"/>
+                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJ6-8M-mCk">
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oww-Fa-2k2">
                         <rect key="frame" x="10" y="10" width="80" height="80"/>
@@ -30,14 +30,16 @@
             </view>
             <color key="backgroundColor" name="CardColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="HJ6-8M-mCk" secondAttribute="bottom" constant="13" id="AsK-eI-5k6"/>
+                <constraint firstAttribute="bottom" secondItem="HJ6-8M-mCk" secondAttribute="bottom" id="AsK-eI-5k6"/>
                 <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Bef-nC-Jci"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="KOJ-Bz-6N8"/>
                 <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="a5B-Ni-cpI"/>
-                <constraint firstItem="HJ6-8M-mCk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="13" id="mVS-fZ-Mvg"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mVS-fZ-Mvg"/>
                 <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="10" id="qgU-dR-kYM"/>
-                <constraint firstItem="HJ6-8M-mCk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="13" id="sgr-vh-vMj"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="sgr-vh-vMj"/>
                 <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="10" id="tT8-I4-AIY"/>
-                <constraint firstAttribute="trailing" secondItem="HJ6-8M-mCk" secondAttribute="trailing" constant="13" id="xIw-lM-FjM"/>
+                <constraint firstAttribute="trailing" secondItem="HJ6-8M-mCk" secondAttribute="trailing" id="xIw-lM-FjM"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="zAV-tb-pUY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="202" height="180"/>
